--- a/meu site/form.css
+++ b/meu site/form.css
@@ -78,7 +78,6 @@ textarea {
     width: 100%;
     padding: 10px;
     margin-top: 8px;
-    border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -88,24 +87,19 @@ textarea {
     min-height: 100px;
 }
 
-button {
-    margin-top: 20px;
-    width: 100%;
+.botao{
+    display: flex;
+    margin: 20px;
+    width: 80%;
+    text-align: center;
+    text-decoration: none;
     background-color: #4CAF50;
     color: white;
     padding: 12px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
     font-size: 16px;
 }
 
-button:hover {
+.botao:hover {
     background-color: #45a049;
 }
 
-.success-message {
-    color: green;
-    text-align: center;
-    margin-top: 20px;
-}
