--- a/meu site/form.css
+++ b/meu site/form.css
@@ -103,3 +103,13 @@ textarea {
     background-color: #45a049;
 }
 
+.footer {
+    background-color: #272727;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 40px;
+    font-size: 14px;
+    width: 100%;
+}
+
