--- a/meu site/style.css
+++ b/meu site/style.css
@@ -101,4 +101,14 @@ header {
     box-shadow: #686666 5px 5px ;
 }
 
+.footer {
+    background-color: #272727;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 40px;
+    font-size: 14px;
+    width: 100%;
+}
+
 
